--- a/examples/index.html
+++ b/examples/index.html
@@ -355,6 +355,7 @@
                     </div>
 
                     <div class="code-block">
+                        <button class="copy-button" onclick="copyCode(this)">Copy</button>
 <pre><span class="keyword">screen</span> <span class="string">"ログインフォーム"</span> size(400, 350) {
   <span class="keyword">box</span> <span class="string">"ログインコンテナ"</span> at(50, 50) size(300, 250) style(
     background: <span class="string">"#ffffff"</span>, 
@@ -437,6 +438,7 @@
                     </div>
 
                     <div class="code-block">
+                        <button class="copy-button" onclick="copyCode(this)">Copy</button>
 <pre><span class="keyword">screen</span> <span class="string">"管理ダッシュボード"</span> size(800, 600) {
   <span class="comment">// ヘッダー</span>
   <span class="keyword">box</span> <span class="string">"ヘッダー"</span> at(0, 0) size(800, 60) style(
@@ -544,6 +546,7 @@
                     </div>
 
                     <div class="code-block">
+                        <button class="copy-button" onclick="copyCode(this)">Copy</button>
 <pre><span class="keyword">screen</span> <span class="string">"3層アーキテクチャ"</span> size(600, 400) {
   <span class="comment">// プレゼンテーション層</span>
   <span class="keyword">box</span> <span class="string">"プレゼンテーション層"</span> at(50, 50) size(500, 80) style(
@@ -614,6 +617,7 @@
                     </div>
 
                     <div class="code-block">
+                        <button class="copy-button" onclick="copyCode(this)">Copy</button>
 <pre><span class="keyword">screen</span> <span class="string">"マイクロサービス構成"</span> size(800, 600) {
   <span class="comment">// API Gateway</span>
   <span class="keyword">loadbalancer</span> <span class="string">"API Gateway"</span> at(350, 50) size(120, 60) <span class="keyword">as</span> gateway style(
@@ -725,6 +729,7 @@
                     </div>
 
                     <div class="code-block">
+                        <button class="copy-button" onclick="copyCode(this)">Copy</button>
 <pre><span class="keyword">screen</span> <span class="string">"ユーザー登録フロー"</span> size(600, 500) {
   <span class="comment">// 開始</span>
   <span class="keyword">circle</span> <span class="string">"開始"</span> at(300, 50) radius(30) style(
