--- a/examples/index.html
+++ b/examples/index.html
@@ -164,6 +164,7 @@
             overflow-x: auto;
             max-height: 400px;
             overflow-y: auto;
+            position: relative;
         }
 
         .code-block .keyword {
@@ -180,19 +181,25 @@
         }
 
         .copy-button {
-            background: #667eea;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: rgba(102, 126, 234, 0.8);
+            border: 1px solid rgba(102, 126, 234, 1);
             color: white;
-            border: none;
-            padding: 0.5rem 1rem;
+            padding: 5px 10px;
             border-radius: 5px;
-            font-size: 0.8rem;
             cursor: pointer;
-            margin-top: 0.5rem;
+            font-size: 0.8rem;
             transition: background 0.3s ease;
         }
 
         .copy-button:hover {
-            background: #5a67d8;
+            background: rgba(90, 103, 216, 0.9);
+        }
+
+        .copy-button.copied {
+            background: rgba(76, 175, 80, 0.8);
         }
 
         .use-case {
