--- a/examples/index.html
+++ b/examples/index.html
@@ -378,17 +378,15 @@
                                 <rect width="100%" height="100%" fill="white"/>
                                 <rect style="fill: white; stroke: black; stroke-width: 1" x="50" y="50" width="300" height="200"/>
                                 <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="200" y="150">フォーム</text>
-                                <g transform="translate(50, 50)">
-                                    <rect id="username" style="fill: white; stroke: #d1d5db; stroke-width: 1" x="20" y="30" width="260" height="40" rx="4" ry="4"/>
-                                    <text style="text-anchor: start; dominant-baseline: middle; fill: #9ca3af; font-weight: normal; font-family: Arial, sans-serif; font-size: 13px" x="28" y="50">ユーザー名</text>
-                                    <rect id="password" style="fill: white; stroke: #d1d5db; stroke-width: 1" x="20" y="90" width="260" height="40" rx="4" ry="4"/>
-                                    <text style="text-anchor: start; dominant-baseline: middle; fill: #9ca3af; font-weight: normal; font-family: Arial, sans-serif; font-size: 13px" x="28" y="110">パスワード</text>
-                                    <defs><filter id="shadow-20-150">
-                                        <feDropShadow dx="0" dy="2" stdDeviation="2" flood-opacity="0.15"/>
-                                    </filter></defs>
-                                    <rect id="loginBtn" style="fill: #3b82f6; stroke: #2563eb; stroke-width: 1" x="20" y="150" width="100" height="40" rx="6" ry="6" filter="url(#shadow-20-150)"/>
-                                    <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: 500; font-family: Arial, sans-serif; font-size: 14px" x="70" y="170">ログイン</text>
-                                </g>
+                                <rect id="username" style="fill: white; stroke: #d1d5db; stroke-width: 1" x="80" y="100" width="240" height="30" rx="4" ry="4"/>
+                                <text style="text-anchor: start; dominant-baseline: middle; fill: #9ca3af; font-weight: normal; font-family: Arial, sans-serif; font-size: 13px" x="88" y="115">ユーザー名</text>
+                                <rect id="password" style="fill: white; stroke: #d1d5db; stroke-width: 1" x="80" y="140" width="240" height="30" rx="4" ry="4"/>
+                                <text style="text-anchor: start; dominant-baseline: middle; fill: #9ca3af; font-weight: normal; font-family: Arial, sans-serif; font-size: 13px" x="88" y="155">パスワード</text>
+                                <defs><filter id="shadow-160-190">
+                                    <feDropShadow dx="0" dy="2" stdDeviation="2" flood-opacity="0.15"/>
+                                </filter></defs>
+                                <rect id="loginBtn" style="fill: #3b82f6; stroke: #2563eb; stroke-width: 1" x="160" y="190" width="80" height="30" rx="6" ry="6" filter="url(#shadow-160-190)"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: 500; font-family: Arial, sans-serif; font-size: 14px" x="200" y="205">ログイン</text>
                             </svg>
                         </div>
                     </div>
@@ -448,9 +446,9 @@
                     <div class="code-block">
                         <button class="copy-button" onclick="copyCode(this)">Copy</button>
 <pre><span class="keyword">screen</span> <span class="string">"管理ダッシュボード"</span> size(800, 600) {
-  <span class="keyword">header</span> <span class="string">"メニュー"</span> at(0, 0) size(800, 60)
-  <span class="keyword">sidebar</span> <span class="string">"サイドバー"</span> at(0, 60) size(200, 540)
-  <span class="keyword">content</span> <span class="string">"メインコンテンツ"</span> at(200, 60) size(600, 540)
+  <span class="keyword">box</span> <span class="string">"メニュー"</span> at(0, 0) size(800, 60)
+  <span class="keyword">box</span> <span class="string">"サイドバー"</span> at(0, 60) size(200, 540)
+  <span class="keyword">box</span> <span class="string">"メインコンテンツ"</span> at(200, 60) size(600, 540)
 }</pre>                    </div>
 
                     <div class="use-case">
@@ -463,16 +461,12 @@
                         <div class="svg-preview">
                             <svg width="400" height="300" viewBox="0 0 400 300" xmlns="http://www.w3.org/2000/svg" style="max-width: 100%; height: auto;">
                                 <rect width="100%" height="100%" fill="white"/>
-                                <text x="200" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="16px" font-weight="bold" fill="#333">ダッシュボードレイアウト</text>
-                                <rect x="20" y="60" width="360" height="40" fill="#667eea" stroke="#5a67d8" stroke-width="1" rx="4"/>
-                                <text x="200" y="85" text-anchor="middle" font-family="Arial, sans-serif" font-size="14px" fill="white">ヘッダー・メニュー</text>
-                                <rect x="20" y="110" width="80" height="160" fill="#e2e8f0" stroke="#cbd5e0" stroke-width="1" rx="4"/>
-                                <text x="60" y="195" text-anchor="middle" font-family="Arial, sans-serif" font-size="12px" fill="#4a5568">サイドバー</text>
-                                <rect x="110" y="110" width="270" height="160" fill="#f7fafc" stroke="#e2e8f0" stroke-width="1" rx="4"/>
-                                <text x="245" y="195" text-anchor="middle" font-family="Arial, sans-serif" font-size="12px" fill="#4a5568">メインコンテンツエリア</text>
-                                <rect x="120" y="125" width="80" height="50" fill="#4299e1" stroke="#3182ce" stroke-width="1" rx="4"/>
-                                <rect x="210" y="125" width="80" height="50" fill="#48bb78" stroke="#38a169" stroke-width="1" rx="4"/>
-                                <rect x="300" y="125" width="70" height="50" fill="#ed8936" stroke="#dd6b20" stroke-width="1" rx="4"/>
+                                <rect style="fill: white; stroke: black; stroke-width: 1" x="0" y="0" width="400" height="30"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="200" y="15">メニュー</text>
+                                <rect style="fill: white; stroke: black; stroke-width: 1" x="0" y="30" width="100" height="270"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="50" y="165">サイドバー</text>
+                                <rect style="fill: white; stroke: black; stroke-width: 1" x="100" y="30" width="300" height="270"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="250" y="165">メインコンテンツ</text>
                             </svg>
                         </div>
                     </div>
