--- a/examples/index.html
+++ b/examples/index.html
@@ -391,19 +391,30 @@
                     <div class="preview-box">
                         <h4>生成結果:</h4>
                         <div class="svg-preview">
-                            <svg width="400" height="300" viewBox="0 0 400 300" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="400" height="500" viewBox="0 0 400 500" xmlns="http://www.w3.org/2000/svg" style="max-width: 100%; height: auto;">
                                 <rect width="100%" height="100%" fill="white"/>
-                                <rect style="fill: white; stroke: black; stroke-width: 1" x="50" y="50" width="300" height="200"/>
-                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="200" y="150">フォーム</text>
-                                <rect id="username" style="fill: white; stroke: #d1d5db; stroke-width: 1" x="80" y="100" width="240" height="30" rx="4" ry="4"/>
-                                <text style="text-anchor: start; dominant-baseline: middle; fill: #9ca3af; font-weight: normal; font-family: Arial, sans-serif; font-size: 13px" x="88" y="115">ユーザー名</text>
-                                <rect id="password" style="fill: white; stroke: #d1d5db; stroke-width: 1" x="80" y="140" width="240" height="30" rx="4" ry="4"/>
-                                <text style="text-anchor: start; dominant-baseline: middle; fill: #9ca3af; font-weight: normal; font-family: Arial, sans-serif; font-size: 13px" x="88" y="155">パスワード</text>
-                                <defs><filter id="shadow-160-190">
+                                <rect style="fill: white; stroke: black; stroke-width: 1; fill: #1e3a8a" x="0" y="0" width="400" height="80"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px; fill: white" x="200" y="40">ヘッダー</text>
+                                <text style="fill: #000000; font-family: Arial, sans-serif; font-size: 24px; font-weight: normal; fill: white; text-anchor: middle" x="200" y="40">Company Portal</text>
+                                <rect style="fill: white; stroke: black; stroke-width: 1; fill: #f8fafc; stroke-width: 1px; stroke: #e2e8f0" x="50" y="120" width="300" height="280"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="200" y="260">ログインフォーム</text>
+                                <text style="fill: #000000; font-family: Arial, sans-serif; font-size: 14px; font-weight: normal; fill: #374151; text-anchor: start" x="70" y="150">ユーザー名</text>
+                                <rect id="username" style="fill: white; stroke: #d1d5db; stroke-width: 1; fill: white; stroke-width: 2px; stroke: #d1d5db" x="70" y="170" width="260" height="40" rx="4" ry="4"/>
+                                <text style="text-anchor: start; dominant-baseline: middle; fill: #9ca3af; font-weight: normal; font-family: Arial, sans-serif; font-size: 13px" x="78" y="190">社員番号またはメールアドレス</text>
+                                <text style="fill: #000000; font-family: Arial, sans-serif; font-size: 14px; font-weight: normal; fill: #374151; text-anchor: start" x="70" y="230">パスワード</text>
+                                <rect id="password" style="fill: white; stroke: #d1d5db; stroke-width: 1; fill: white; stroke-width: 2px; stroke: #d1d5db" x="70" y="250" width="260" height="40" rx="4" ry="4"/>
+                                <text style="text-anchor: start; dominant-baseline: middle; fill: #9ca3af; font-weight: normal; font-family: Arial, sans-serif; font-size: 13px" x="78" y="270">パスワードを入力</text>
+                                <defs><filter id="shadow-70-320">
                                     <feDropShadow dx="0" dy="2" stdDeviation="2" flood-opacity="0.15"/>
                                 </filter></defs>
-                                <rect id="loginBtn" style="fill: #3b82f6; stroke: #2563eb; stroke-width: 1" x="160" y="190" width="80" height="30" rx="6" ry="6" filter="url(#shadow-160-190)"/>
-                                <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: 500; font-family: Arial, sans-serif; font-size: 14px" x="200" y="205">ログイン</text>
+                                <rect id="loginBtn" style="fill: #3b82f6; stroke: #2563eb; stroke-width: 1; fill: #059669" x="70" y="320" width="120" height="45" rx="6" ry="6" filter="url(#shadow-70-320)"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: 500; font-family: Arial, sans-serif; font-size: 14px; fill: white" x="130" y="342.5">ログイン</text>
+                                <defs><filter id="shadow-210-320-2">
+                                    <feDropShadow dx="0" dy="2" stdDeviation="2" flood-opacity="0.15"/>
+                                </filter></defs>
+                                <rect id="cancelBtn" style="fill: #3b82f6; stroke: #2563eb; stroke-width: 1; fill: #6b7280" x="210" y="320" width="120" height="45" rx="6" ry="6" filter="url(#shadow-210-320-2)"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: 500; font-family: Arial, sans-serif; font-size: 14px; fill: white" x="270" y="342.5">キャンセル</text>
+                                <text style="fill: #000000; font-family: Arial, sans-serif; font-size: 12px; font-weight: normal; fill: #9ca3af; text-anchor: middle" x="200" y="450">© 2024 Company Name</text>
                             </svg>
                         </div>
                     </div>
@@ -495,14 +506,36 @@
                     <div class="preview-box">
                         <h4>📋 生成結果プレビュー</h4>
                         <div class="svg-preview">
-                            <svg width="400" height="300" viewBox="0 0 400 300" xmlns="http://www.w3.org/2000/svg" style="max-width: 100%; height: auto;">
+                            <svg width="600" height="400" viewBox="0 0 600 400" xmlns="http://www.w3.org/2000/svg" style="max-width: 100%; height: auto;">
                                 <rect width="100%" height="100%" fill="white"/>
-                                <rect style="fill: white; stroke: black; stroke-width: 1" x="0" y="0" width="400" height="30"/>
-                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="200" y="15">メニュー</text>
-                                <rect style="fill: white; stroke: black; stroke-width: 1" x="0" y="30" width="100" height="270"/>
-                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="50" y="165">サイドバー</text>
-                                <rect style="fill: white; stroke: black; stroke-width: 1" x="100" y="30" width="300" height="270"/>
-                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="250" y="165">メインコンテンツ</text>
+                                <rect style="fill: white; stroke: black; stroke-width: 1; fill: #1f2937" x="0" y="0" width="600" height="60"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px; fill: white" x="300" y="30">ヘッダー</text>
+                                <text style="fill: #000000; font-family: Arial, sans-serif; font-size: 18px; font-weight: normal; fill: white; text-anchor: middle" x="300" y="30">管理システム</text>
+                                <rect style="fill: white; stroke: black; stroke-width: 1; fill: #f3f4f6; stroke-width: 1px; stroke: #e5e7eb" x="0" y="60" width="150" height="340"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="75" y="230">サイドバー</text>
+                                <g transform="translate(0, 60)">
+                                    <defs><filter id="shadow-dash">
+                                        <feDropShadow dx="0" dy="2" stdDeviation="2" flood-opacity="0.15"/>
+                                    </filter></defs>
+                                    <rect style="fill: #3b82f6; stroke: #2563eb; stroke-width: 1" x="15" y="20" width="120" height="35" rx="6" ry="6" filter="url(#shadow-dash)"/>
+                                    <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: 500; font-family: Arial, sans-serif; font-size: 14px" x="75" y="37.5">ダッシュボード</text>
+                                    <rect style="fill: #6b7280; stroke: #2563eb; stroke-width: 1" x="15" y="65" width="120" height="35" rx="6" ry="6" filter="url(#shadow-dash)"/>
+                                    <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: 500; font-family: Arial, sans-serif; font-size: 14px" x="75" y="82.5">ユーザー管理</text>
+                                    <rect style="fill: #6b7280; stroke: #2563eb; stroke-width: 1" x="15" y="110" width="120" height="35" rx="6" ry="6" filter="url(#shadow-dash)"/>
+                                    <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: 500; font-family: Arial, sans-serif; font-size: 14px" x="75" y="127.5">売上分析</text>
+                                </g>
+                                <rect style="fill: white; stroke: black; stroke-width: 1; fill: white; stroke-width: 1px; stroke: #e5e7eb" x="150" y="60" width="450" height="340"/>
+                                <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="375" y="230">メインコンテンツ</text>
+                                <g transform="translate(150, 60)">
+                                    <text style="font-size: 16px; font-weight: bold; fill: #1f2937; text-anchor: middle" x="225" y="30">今月の概要</text>
+                                    <rect style="fill: #ecfdf5; stroke: #10b981; stroke-width: 2px" x="30" y="60" width="120" height="80"/>
+                                    <text style="text-anchor: middle; dominant-baseline: middle; fill: #000000; font-weight: normal; font-family: Arial, sans-serif; font-size: 14px" x="90" y="100">売上</text>
+                                    <g transform="translate(30, 60)">
+                                        <text style="font-size: 16px; font-weight: bold; fill: #059669; text-anchor: middle" x="60" y="40">¥2.4M</text>
+                                    </g>
+                                    <rect style="fill: #7c3aed; stroke: #2563eb; stroke-width: 1" x="30" y="300" width="100" height="35" rx="6" ry="6"/>
+                                    <text style="text-anchor: middle; dominant-baseline: middle; fill: white; font-weight: 500; font-family: Arial, sans-serif; font-size: 14px" x="80" y="317.5">レポート</text>
+                                </g>
                             </svg>
                         </div>
                     </div>
